--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-animated-screen",
   "version": "1.0.3",
-  "description": "Animated screens made easy",
+  "description": "React NAtive Animated Screens made easy",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
