--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-animated-screen",
-  "version": "1.0.4",
-  "description": "React NAtive Animated Screens made easy",
+  "version": "1.1.0",
+  "description": "React Native Animated Screens made easy",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
